[package]
name = "cfst"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
colored = "2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.17"
bytes = "1.5.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
